--- a/style.css
+++ b/style.css
@@ -25,3 +25,52 @@ html {
   background-color: gold;
   border: 5px black;
 }
+#mainnav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+#topli {
+  float: left;
+}
+a {
+  display: block;
+  padding: 5px;
+  background-color: gold;
+  color: black;
+}
+#topli a:hover {
+  color: blue;
+}
+h1 {
+  text-align: center;
+}
+h2 {
+  text-align: center;
+}
+#homeDiv {
+  padding: 5px;
+  border: 8px solid red;
+  margin: 5px;
+}
+#center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+#history {
+  padding: 5px;
+  border: 8px solid red;
+  margin: 5px;
+}
+#films {
+  padding: 5px;
+  border: 8px solid red;
+  margin: 5px
+}
+#books {
+  padding: 5px;
+  border: 8px solid red;
+  margin: 5px;
+}
+
